feat: refactor primary database