@@ -1,7 +1,7 @@
 package com.culcon.backend.configs;
 
 import com.culcon.backend.exceptions.CustomAccessDeniedHandler;
-import com.culcon.backend.models.Role;
+import com.culcon.backend.models.user.Role;
 import com.culcon.backend.services.authenticate.UserAuthService;
 import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Bean;
@@ -37,101 +37,101 @@ import java.util.List;
 @AllArgsConstructor
 public class SecurityConfig implements WebMvcConfigurer {
 
-	private final JwtAuthenticationFilter jwtAuthenticationFilter;
-	private final CustomAccessDeniedHandler customAccessDeniedHandler;
-	private final UserAuthService userServices;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final CustomAccessDeniedHandler customAccessDeniedHandler;
+    private final UserAuthService userServices;
 
-	private final LogoutHandler logoutHandler;
+    private final LogoutHandler logoutHandler;
 
-	@Bean
-	public static PasswordEncoder passwordEncoder() {
-		return new BCryptPasswordEncoder();
-	}
+    @Bean
+    public static PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
-	@Bean
-	public SecurityFilterChain filterChain(HttpSecurity http)
-		throws Exception {
-		http.csrf(AbstractHttpConfigurer::disable)
-			.cors(x -> x.configurationSource(corsConfigurationSource()))
-			.authorizeHttpRequests(
-				request -> request
-					.requestMatchers(
-						"/api/auth/**",
-						"/swagger-ui/**",
-						"/api/public/**",
-						"/v3/api-docs/**")
-					.permitAll()
-					.requestMatchers("/api/customer/**")
-					.hasAnyAuthority(Role.CUSTOMER.name())
-					.anyRequest()
-					.authenticated())
-			.exceptionHandling(
-				e -> e.accessDeniedHandler(customAccessDeniedHandler)
-					.authenticationEntryPoint(
-						new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
-			.sessionManagement(
-				manager
-					-> manager.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-			.authenticationProvider(authenticationProvider())
-			.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-			.logout(
-				logout -> logout
-					.logoutUrl("/api/v1/auth/logout")
-					.addLogoutHandler(logoutHandler)
-					.logoutSuccessHandler(
-						(request,
-						 response,
-						 authentication)
-							-> SecurityContextHolder.clearContext()));
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http)
+            throws Exception {
+        http.csrf(AbstractHttpConfigurer::disable)
+                .cors(x -> x.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(
+                        request -> request
+                                .requestMatchers(
+                                        "/api/auth/**",
+                                        "/swagger-ui/**",
+                                        "/api/public/**",
+                                        "/v3/api-docs/**")
+                                .permitAll()
+                                .requestMatchers("/api/customer/**")
+                                .hasAnyAuthority(Role.CUSTOMER.name())
+                                .anyRequest()
+                                .authenticated())
+                .exceptionHandling(
+                        e -> e.accessDeniedHandler(customAccessDeniedHandler)
+                                .authenticationEntryPoint(
+                                        new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
+                .sessionManagement(
+                        manager
+                                -> manager.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authenticationProvider(authenticationProvider())
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .logout(
+                        logout -> logout
+                                .logoutUrl("/api/v1/auth/logout")
+                                .addLogoutHandler(logoutHandler)
+                                .logoutSuccessHandler(
+                                        (request,
+                                         response,
+                                         authentication)
+                                                -> SecurityContextHolder.clearContext()));
 
-		return http.build();
-	}
+        return http.build();
+    }
 
-	@Bean
-	public AuthenticationProvider authenticationProvider() {
-		DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
-		authenticationProvider.setUserDetailsService(userServices.userDetailsServices());
-		authenticationProvider.setPasswordEncoder(passwordEncoder());
-		return authenticationProvider;
-	}
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
+        authenticationProvider.setUserDetailsService(userServices.userDetailsServices());
+        authenticationProvider.setPasswordEncoder(passwordEncoder());
+        return authenticationProvider;
+    }
 
-	@Bean
-	public AuthenticationManager authenticationManager(AuthenticationConfiguration config)
-		throws Exception {
-		return config.getAuthenticationManager();
-	}
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config)
+            throws Exception {
+        return config.getAuthenticationManager();
+    }
 
-	@Override
-	public void addCorsMappings(@NonNull
-	                            CorsRegistry registry) {
-		registry
-			.addMapping("/api/**")
-			.allowedOrigins("*")
-			.allowedOrigins("/**")
-			.allowedOrigins("**")
-			.allowedOrigins("http://localhost:8080")
-			.allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
-			.allowedHeaders("*")
-			.allowedHeaders("/**")
-			.allowedHeaders("**")
-			.exposedHeaders("X-Get-Header");
-	}
+    @Override
+    public void addCorsMappings(@NonNull
+                                CorsRegistry registry) {
+        registry
+                .addMapping("/api/**")
+                .allowedOrigins("*")
+                .allowedOrigins("/**")
+                .allowedOrigins("**")
+                .allowedOrigins("http://localhost:8080")
+                .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
+                .allowedHeaders("*")
+                .allowedHeaders("/**")
+                .allowedHeaders("**")
+                .exposedHeaders("X-Get-Header");
+    }
 
 
-	@Bean
-	public CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration = new CorsConfiguration();
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
 
-		configuration.setAllowedOrigins(List.of("*"));
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-		configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-		configuration.setExposedHeaders(List.of("x-auth-token"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+        configuration.setExposedHeaders(List.of("x-auth-token"));
 
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 
-		source.registerCorsConfiguration("/**", configuration);
-		source.registerCorsConfiguration("*", configuration);
-		source.registerCorsConfiguration("/api/**", configuration);
-		return source;
-	}
+        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("*", configuration);
+        source.registerCorsConfiguration("/api/**", configuration);
+        return source;
+    }
 }
